<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="CheckUpdates">Check updates</string>
    <string name="Button_Info">Button info</string>
    <string name="Button_1">1</string>
    <string name="Button_2">2</string>
    <string name="Button_3">3</string>
    <string name="Button_4">4</string>
    <string name="Button_5">5</string>
    <string name="Button_6">6</string>
    <string name="Button_7">7</string>
    <string name="Button_8">8</string>
    <string name="Button_9">9</string>
    <string name="Button_0">0</string>
    <string name="Button_Plus">+</string>
    <string name="Button_Minus">-</string>
    <string name="Button_Delete">/</string>
    <string name="Button_Num">*</string>
    <string name="Button_Dot">,</string>
    <string name="Button_CE">CE</string>
    <string name="Button_Equal">=</string>
</resources>
